--- a/src/components/trend/search/index.scss
+++ b/src/components/trend/search/index.scss
@@ -1,7 +1,20 @@
 .trend-search{
     position: relative;
     text-align: left;
+    height: 70px;
+    line-height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+
+}
+.trend-search-title{
     font-size: 24px;
     font-weight: bold;
-    padding: 20px 10px;
+    padding: 0 20px;
+}
+
+.trend-search-content{
+    display: block;
 }
