--- a/src/views/trend/index.scss
+++ b/src/views/trend/index.scss
@@ -2,3 +2,8 @@
     height: calc(100vh - 120px);
     overflow-y: scroll;
 }
+
+.trend-list-content{
+    height: calc(100vh - 120px - 70px);
+    overflow-y: scroll; 
+}
